examples/kubeflow-mlflow/terraform-module-kubeflow/manifests/kubeflow/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: ${namespace}
spec:
  selector:
    istio: ${ingress_gateway_selector}
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: %{ if use_cert_manager ~}kubeflow-cert%{ else ~}${credential_name}%{ endif }
    hosts:
      - ${dns_record}.${domain_name}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: ${namespace}
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - "*"
  #- ${dns_record}.${domain_name}
  http:
  - match:
    - uri:
        prefix: /kiali/
    rewrite:
      uri: /kiali/
    route:
    - destination:
        host: kiali.${istio_namespace}.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: ${namespace}
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - "*"
  #- ${dns_record}.${domain_name}
  http:
  - match:
    - method:
        exact: GET
      uri:
        prefix: /grafana/
    rewrite:
      uri: /grafana/
    route:
    - destination:
        host: grafana.${istio_namespace}.svc.cluster.local
        port:
          number: 3000
%{ endif }
